[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/ply/resources/ply_mesh.gd" type="Script" id=1]
[ext_resource path="res://addons/ply/nodes/ply.gd" type="Script" id=2]
[ext_resource path="res://materials/wood_materia.tres" type="Material" id=3]
[ext_resource path="res://src/PortCrane.gd" type="Script" id=4]

[sub_resource type="CylinderShape" id=1]
radius = 9.90505
height = 14.5567

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( -9.87935, 0, -0.5, 12.3262, 3.78994, 1 ),
"array_data": PoolByteArray( 192, 249, 4, 191, 182, 227, 23, 64, 0, 0, 0, 191, 0, 127, 0, 0, 192, 203, 228, 62, 182, 227, 23, 64, 0, 0, 0, 191, 0, 127, 0, 0, 192, 203, 228, 62, 182, 227, 23, 64, 0, 0, 0, 63, 0, 127, 0, 0, 192, 249, 4, 191, 182, 227, 23, 64, 0, 0, 0, 63, 0, 127, 0, 0, 160, 89, 73, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 129, 0, 0, 160, 89, 73, 63, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 0, 0, 224, 164, 92, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 0, 0, 224, 164, 92, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 0, 0, 224, 164, 92, 191, 0, 0, 0, 0, 0, 0, 0, 63, 0, 129, 0, 0, 160, 89, 73, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 129, 0, 0, 192, 249, 4, 191, 120, 228, 84, 63, 0, 0, 0, 191, 0, 0, 129, 0, 224, 164, 92, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 129, 0, 160, 89, 73, 63, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 129, 0, 192, 203, 228, 62, 120, 228, 84, 63, 0, 0, 0, 191, 0, 0, 129, 0, 192, 203, 228, 62, 120, 228, 84, 63, 0, 0, 0, 63, 117, 48, 0, 0, 192, 203, 228, 62, 120, 228, 84, 63, 0, 0, 0, 191, 117, 48, 0, 0, 160, 89, 73, 63, 0, 0, 0, 0, 0, 0, 0, 191, 117, 48, 0, 0, 160, 89, 73, 63, 0, 0, 0, 0, 0, 0, 0, 191, 117, 48, 0, 0, 160, 89, 73, 63, 0, 0, 0, 0, 0, 0, 0, 63, 117, 48, 0, 0, 192, 203, 228, 62, 120, 228, 84, 63, 0, 0, 0, 63, 117, 48, 0, 0, 160, 89, 73, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 127, 0, 224, 164, 92, 191, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 127, 0, 192, 249, 4, 191, 120, 228, 84, 63, 0, 0, 0, 63, 0, 0, 127, 0, 160, 89, 73, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 127, 0, 192, 249, 4, 191, 120, 228, 84, 63, 0, 0, 0, 63, 0, 0, 127, 0, 192, 203, 228, 62, 120, 228, 84, 63, 0, 0, 0, 63, 0, 0, 127, 0, 190, 30, 128, 192, 144, 47, 30, 64, 231, 189, 132, 62, 163, 85, 0, 0, 190, 30, 128, 192, 144, 47, 30, 64, 231, 189, 132, 190, 163, 85, 0, 0, 150, 18, 108, 192, 199, 47, 52, 64, 231, 189, 132, 190, 163, 85, 0, 0, 150, 18, 108, 192, 199, 47, 52, 64, 231, 189, 132, 62, 163, 85, 0, 0, 192, 249, 4, 191, 60, 114, 234, 63, 0, 0, 0, 191, 129, 0, 0, 0, 192, 249, 4, 191, 60, 114, 234, 63, 0, 0, 0, 63, 129, 0, 0, 0, 192, 249, 4, 191, 120, 228, 84, 63, 0, 0, 0, 63, 129, 0, 0, 0, 192, 249, 4, 191, 120, 228, 84, 63, 0, 0, 0, 191, 129, 0, 0, 0, 192, 203, 228, 62, 60, 114, 234, 63, 0, 0, 0, 191, 0, 0, 129, 0, 192, 249, 4, 191, 60, 114, 234, 63, 0, 0, 0, 191, 0, 0, 129, 0, 192, 249, 4, 191, 120, 228, 84, 63, 0, 0, 0, 191, 0, 0, 129, 0, 192, 203, 228, 62, 120, 228, 84, 63, 0, 0, 0, 191, 0, 0, 129, 0, 192, 203, 228, 62, 60, 114, 234, 63, 0, 0, 0, 191, 0, 0, 129, 0, 192, 203, 228, 62, 60, 114, 234, 63, 0, 0, 0, 63, 127, 0, 0, 0, 192, 203, 228, 62, 60, 114, 234, 63, 0, 0, 0, 191, 127, 0, 0, 0, 192, 203, 228, 62, 120, 228, 84, 63, 0, 0, 0, 191, 127, 0, 0, 0, 192, 203, 228, 62, 120, 228, 84, 63, 0, 0, 0, 63, 127, 0, 0, 0, 192, 249, 4, 191, 60, 114, 234, 63, 0, 0, 0, 63, 0, 0, 127, 0, 192, 203, 228, 62, 60, 114, 234, 63, 0, 0, 0, 63, 0, 0, 127, 0, 192, 203, 228, 62, 120, 228, 84, 63, 0, 0, 0, 63, 0, 0, 127, 0, 192, 249, 4, 191, 60, 114, 234, 63, 0, 0, 0, 63, 0, 0, 127, 0, 192, 249, 4, 191, 182, 227, 23, 64, 0, 0, 0, 63, 0, 0, 127, 0, 192, 203, 228, 62, 182, 227, 23, 64, 0, 0, 0, 63, 0, 0, 127, 0, 192, 203, 228, 62, 60, 114, 234, 63, 0, 0, 0, 63, 0, 0, 127, 0, 192, 249, 4, 191, 182, 227, 23, 64, 0, 0, 0, 63, 0, 0, 127, 0, 208, 17, 30, 193, 152, 71, 80, 64, 237, 115, 141, 62, 131, 18, 0, 0, 208, 17, 30, 193, 152, 71, 80, 64, 237, 115, 141, 190, 131, 18, 0, 0, 236, 197, 28, 193, 84, 142, 114, 64, 237, 115, 141, 190, 131, 18, 0, 0, 236, 197, 28, 193, 84, 142, 114, 64, 237, 115, 141, 62, 131, 18, 0, 0, 192, 203, 228, 62, 182, 227, 23, 64, 0, 0, 0, 191, 0, 0, 129, 0, 192, 249, 4, 191, 182, 227, 23, 64, 0, 0, 0, 191, 0, 0, 129, 0, 192, 249, 4, 191, 60, 114, 234, 63, 0, 0, 0, 191, 0, 0, 129, 0, 192, 203, 228, 62, 182, 227, 23, 64, 0, 0, 0, 191, 0, 0, 129, 0, 120, 153, 28, 64, 60, 114, 234, 63, 0, 0, 0, 191, 127, 0, 0, 0, 120, 153, 28, 64, 60, 114, 234, 63, 0, 0, 0, 63, 127, 0, 0, 0, 120, 153, 28, 64, 140, 237, 48, 64, 0, 0, 0, 63, 127, 0, 0, 0, 120, 153, 28, 64, 140, 237, 48, 64, 0, 0, 0, 191, 127, 0, 0, 0, 240, 50, 185, 63, 60, 114, 234, 63, 0, 0, 0, 191, 0, 0, 129, 0, 240, 50, 185, 63, 140, 237, 48, 64, 0, 0, 0, 191, 0, 0, 129, 0, 240, 50, 185, 63, 60, 114, 234, 63, 0, 0, 0, 63, 0, 129, 0, 0, 240, 50, 185, 63, 60, 114, 234, 63, 0, 0, 0, 191, 0, 129, 0, 0, 192, 203, 228, 62, 60, 114, 234, 63, 0, 0, 0, 191, 0, 129, 0, 0, 192, 203, 228, 62, 60, 114, 234, 63, 0, 0, 0, 191, 0, 129, 0, 0, 192, 203, 228, 62, 60, 114, 234, 63, 0, 0, 0, 63, 0, 129, 0, 0, 240, 50, 185, 63, 60, 114, 234, 63, 0, 0, 0, 63, 0, 129, 0, 0, 240, 50, 185, 63, 140, 237, 48, 64, 0, 0, 0, 63, 0, 0, 127, 0, 240, 50, 185, 63, 60, 114, 234, 63, 0, 0, 0, 63, 0, 0, 127, 0, 240, 50, 185, 63, 140, 237, 48, 64, 0, 0, 0, 191, 210, 118, 0, 0, 240, 50, 185, 63, 140, 237, 48, 64, 0, 0, 0, 63, 210, 118, 0, 0, 192, 203, 228, 62, 182, 227, 23, 64, 0, 0, 0, 63, 210, 118, 0, 0, 192, 203, 228, 62, 182, 227, 23, 64, 0, 0, 0, 191, 210, 118, 0, 0, 120, 153, 28, 64, 140, 237, 48, 64, 0, 0, 0, 191, 0, 127, 0, 0, 120, 153, 28, 64, 140, 237, 48, 64, 0, 0, 0, 63, 0, 127, 0, 0, 240, 50, 185, 63, 140, 237, 48, 64, 0, 0, 0, 63, 0, 127, 0, 0, 240, 50, 185, 63, 140, 237, 48, 64, 0, 0, 0, 63, 0, 127, 0, 0, 240, 50, 185, 63, 140, 237, 48, 64, 0, 0, 0, 191, 0, 127, 0, 0, 120, 153, 28, 64, 140, 237, 48, 64, 0, 0, 0, 191, 0, 127, 0, 0, 120, 153, 28, 64, 60, 114, 234, 63, 0, 0, 0, 191, 0, 0, 129, 0, 120, 153, 28, 64, 140, 237, 48, 64, 0, 0, 0, 191, 0, 0, 129, 0, 120, 153, 28, 64, 60, 114, 234, 63, 0, 0, 0, 63, 0, 129, 0, 0, 120, 153, 28, 64, 60, 114, 234, 63, 0, 0, 0, 191, 0, 129, 0, 0, 240, 50, 185, 63, 60, 114, 234, 63, 0, 0, 0, 191, 0, 129, 0, 0, 120, 153, 28, 64, 60, 114, 234, 63, 0, 0, 0, 63, 0, 129, 0, 0, 120, 153, 28, 64, 140, 237, 48, 64, 0, 0, 0, 63, 0, 0, 127, 0, 120, 153, 28, 64, 60, 114, 234, 63, 0, 0, 0, 63, 0, 0, 127, 0, 192, 249, 4, 191, 182, 227, 23, 64, 0, 0, 0, 63, 230, 0, 124, 0, 192, 249, 4, 191, 60, 114, 234, 63, 0, 0, 0, 63, 230, 0, 124, 0, 112, 172, 199, 191, 252, 114, 255, 63, 237, 115, 141, 62, 230, 0, 124, 0, 192, 249, 4, 191, 182, 227, 23, 64, 0, 0, 0, 63, 228, 4, 123, 0, 112, 172, 199, 191, 252, 114, 255, 63, 237, 115, 141, 62, 228, 4, 123, 0, 80, 77, 189, 191, 58, 0, 34, 64, 237, 115, 141, 62, 228, 4, 123, 0, 112, 172, 199, 191, 252, 114, 255, 63, 237, 115, 141, 62, 237, 131, 0, 0, 192, 249, 4, 191, 60, 114, 234, 63, 0, 0, 0, 63, 237, 131, 0, 0, 192, 249, 4, 191, 60, 114, 234, 63, 0, 0, 0, 191, 237, 131, 0, 0, 192, 249, 4, 191, 60, 114, 234, 63, 0, 0, 0, 191, 237, 131, 0, 0, 112, 172, 199, 191, 252, 114, 255, 63, 237, 115, 141, 190, 237, 131, 0, 0, 112, 172, 199, 191, 252, 114, 255, 63, 237, 115, 141, 62, 237, 131, 0, 0, 112, 172, 199, 191, 252, 114, 255, 63, 237, 115, 141, 190, 230, 0, 132, 0, 192, 249, 4, 191, 60, 114, 234, 63, 0, 0, 0, 191, 230, 0, 132, 0, 192, 249, 4, 191, 182, 227, 23, 64, 0, 0, 0, 191, 230, 0, 132, 0, 192, 249, 4, 191, 182, 227, 23, 64, 0, 0, 0, 191, 228, 4, 133, 0, 80, 77, 189, 191, 58, 0, 34, 64, 237, 115, 141, 190, 228, 4, 133, 0, 112, 172, 199, 191, 252, 114, 255, 63, 237, 115, 141, 190, 228, 4, 133, 0, 80, 77, 189, 191, 58, 0, 34, 64, 237, 115, 141, 190, 20, 125, 0, 0, 192, 249, 4, 191, 182, 227, 23, 64, 0, 0, 0, 191, 20, 125, 0, 0, 192, 249, 4, 191, 182, 227, 23, 64, 0, 0, 0, 63, 20, 125, 0, 0, 192, 249, 4, 191, 182, 227, 23, 64, 0, 0, 0, 63, 20, 125, 0, 0, 80, 77, 189, 191, 58, 0, 34, 64, 237, 115, 141, 62, 20, 125, 0, 0, 80, 77, 189, 191, 58, 0, 34, 64, 237, 115, 141, 190, 20, 125, 0, 0, 236, 197, 28, 193, 84, 142, 114, 64, 237, 115, 141, 62, 18, 125, 0, 0, 236, 197, 28, 193, 84, 142, 114, 64, 237, 115, 141, 190, 18, 125, 0, 0, 80, 77, 189, 191, 58, 0, 34, 64, 237, 115, 141, 190, 18, 125, 0, 0, 80, 77, 189, 191, 58, 0, 34, 64, 237, 115, 141, 190, 18, 125, 0, 0, 80, 77, 189, 191, 58, 0, 34, 64, 237, 115, 141, 62, 18, 125, 0, 0, 236, 197, 28, 193, 84, 142, 114, 64, 237, 115, 141, 62, 18, 125, 0, 0, 208, 17, 30, 193, 152, 71, 80, 64, 237, 115, 141, 62, 0, 0, 127, 0, 236, 197, 28, 193, 84, 142, 114, 64, 237, 115, 141, 62, 0, 0, 127, 0, 80, 77, 189, 191, 58, 0, 34, 64, 237, 115, 141, 62, 0, 0, 127, 0, 80, 77, 189, 191, 58, 0, 34, 64, 237, 115, 141, 62, 0, 0, 127, 0, 112, 172, 199, 191, 252, 114, 255, 63, 237, 115, 141, 62, 0, 0, 127, 0, 208, 17, 30, 193, 152, 71, 80, 64, 237, 115, 141, 62, 0, 0, 127, 0, 208, 17, 30, 193, 152, 71, 80, 64, 237, 115, 141, 190, 238, 131, 0, 0, 208, 17, 30, 193, 152, 71, 80, 64, 237, 115, 141, 62, 238, 131, 0, 0, 112, 172, 199, 191, 252, 114, 255, 63, 237, 115, 141, 62, 238, 131, 0, 0, 112, 172, 199, 191, 252, 114, 255, 63, 237, 115, 141, 62, 238, 131, 0, 0, 112, 172, 199, 191, 252, 114, 255, 63, 237, 115, 141, 190, 238, 131, 0, 0, 208, 17, 30, 193, 152, 71, 80, 64, 237, 115, 141, 190, 238, 131, 0, 0, 236, 197, 28, 193, 84, 142, 114, 64, 237, 115, 141, 190, 0, 0, 129, 0, 208, 17, 30, 193, 152, 71, 80, 64, 237, 115, 141, 190, 0, 0, 129, 0, 112, 172, 199, 191, 252, 114, 255, 63, 237, 115, 141, 190, 0, 0, 129, 0, 112, 172, 199, 191, 252, 114, 255, 63, 237, 115, 141, 190, 0, 0, 129, 0, 80, 77, 189, 191, 58, 0, 34, 64, 237, 115, 141, 190, 0, 0, 129, 0, 236, 197, 28, 193, 84, 142, 114, 64, 237, 115, 141, 190, 0, 0, 129, 0, 46, 47, 123, 191, 190, 160, 73, 63, 231, 189, 132, 62, 197, 24, 109, 0, 192, 249, 4, 191, 120, 228, 84, 63, 0, 0, 0, 63, 197, 24, 109, 0, 224, 164, 92, 191, 0, 0, 0, 0, 0, 0, 0, 63, 197, 24, 109, 0, 224, 164, 92, 191, 0, 0, 0, 0, 0, 0, 0, 63, 197, 24, 109, 0, 57, 82, 148, 191, 13, 122, 182, 62, 231, 189, 132, 62, 197, 24, 109, 0, 46, 47, 123, 191, 190, 160, 73, 63, 231, 189, 132, 62, 197, 24, 109, 0, 57, 82, 148, 191, 13, 122, 182, 62, 231, 189, 132, 62, 159, 175, 0, 0, 224, 164, 92, 191, 0, 0, 0, 0, 0, 0, 0, 63, 159, 175, 0, 0, 224, 164, 92, 191, 0, 0, 0, 0, 0, 0, 0, 191, 159, 175, 0, 0, 224, 164, 92, 191, 0, 0, 0, 0, 0, 0, 0, 191, 159, 175, 0, 0, 57, 82, 148, 191, 13, 122, 182, 62, 231, 189, 132, 190, 159, 175, 0, 0, 57, 82, 148, 191, 13, 122, 182, 62, 231, 189, 132, 62, 159, 175, 0, 0, 224, 164, 92, 191, 0, 0, 0, 0, 0, 0, 0, 191, 197, 24, 147, 0, 192, 249, 4, 191, 120, 228, 84, 63, 0, 0, 0, 191, 197, 24, 147, 0, 46, 47, 123, 191, 190, 160, 73, 63, 231, 189, 132, 190, 197, 24, 147, 0, 224, 164, 92, 191, 0, 0, 0, 0, 0, 0, 0, 191, 197, 24, 147, 0, 46, 47, 123, 191, 190, 160, 73, 63, 231, 189, 132, 190, 197, 24, 147, 0, 57, 82, 148, 191, 13, 122, 182, 62, 231, 189, 132, 190, 197, 24, 147, 0, 46, 47, 123, 191, 190, 160, 73, 63, 231, 189, 132, 190, 244, 126, 0, 0, 192, 249, 4, 191, 120, 228, 84, 63, 0, 0, 0, 191, 244, 126, 0, 0, 192, 249, 4, 191, 120, 228, 84, 63, 0, 0, 0, 63, 244, 126, 0, 0, 46, 47, 123, 191, 190, 160, 73, 63, 231, 189, 132, 62, 244, 126, 0, 0, 150, 18, 108, 192, 199, 47, 52, 64, 231, 189, 132, 62, 76, 101, 0, 0, 150, 18, 108, 192, 199, 47, 52, 64, 231, 189, 132, 190, 76, 101, 0, 0, 46, 47, 123, 191, 190, 160, 73, 63, 231, 189, 132, 190, 76, 101, 0, 0, 46, 47, 123, 191, 190, 160, 73, 63, 231, 189, 132, 190, 76, 101, 0, 0, 46, 47, 123, 191, 190, 160, 73, 63, 231, 189, 132, 62, 76, 101, 0, 0, 150, 18, 108, 192, 199, 47, 52, 64, 231, 189, 132, 62, 76, 101, 0, 0, 46, 47, 123, 191, 190, 160, 73, 63, 231, 189, 132, 62, 0, 0, 127, 0, 57, 82, 148, 191, 13, 122, 182, 62, 231, 189, 132, 62, 0, 0, 127, 0, 190, 30, 128, 192, 144, 47, 30, 64, 231, 189, 132, 62, 0, 0, 127, 0, 46, 47, 123, 191, 190, 160, 73, 63, 231, 189, 132, 62, 0, 0, 127, 0, 190, 30, 128, 192, 144, 47, 30, 64, 231, 189, 132, 62, 0, 0, 127, 0, 150, 18, 108, 192, 199, 47, 52, 64, 231, 189, 132, 62, 0, 0, 127, 0, 190, 30, 128, 192, 144, 47, 30, 64, 231, 189, 132, 190, 181, 155, 0, 0, 190, 30, 128, 192, 144, 47, 30, 64, 231, 189, 132, 62, 181, 155, 0, 0, 57, 82, 148, 191, 13, 122, 182, 62, 231, 189, 132, 62, 181, 155, 0, 0, 57, 82, 148, 191, 13, 122, 182, 62, 231, 189, 132, 62, 181, 155, 0, 0, 57, 82, 148, 191, 13, 122, 182, 62, 231, 189, 132, 190, 181, 155, 0, 0, 190, 30, 128, 192, 144, 47, 30, 64, 231, 189, 132, 190, 181, 155, 0, 0, 190, 30, 128, 192, 144, 47, 30, 64, 231, 189, 132, 190, 0, 0, 129, 0, 57, 82, 148, 191, 13, 122, 182, 62, 231, 189, 132, 190, 0, 0, 129, 0, 46, 47, 123, 191, 190, 160, 73, 63, 231, 189, 132, 190, 0, 0, 129, 0, 150, 18, 108, 192, 199, 47, 52, 64, 231, 189, 132, 190, 0, 0, 129, 0 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 2, 0, 3, 0, 0, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 11, 0, 12, 0, 12, 0, 13, 0, 10, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 27, 0, 28, 0, 28, 0, 29, 0, 26, 0, 30, 0, 31, 0, 32, 0, 32, 0, 33, 0, 30, 0, 34, 0, 35, 0, 10, 0, 36, 0, 37, 0, 38, 0, 39, 0, 40, 0, 41, 0, 41, 0, 42, 0, 39, 0, 43, 0, 44, 0, 25, 0, 45, 0, 22, 0, 46, 0, 47, 0, 48, 0, 44, 0, 49, 0, 46, 0, 50, 0, 51, 0, 52, 0, 53, 0, 53, 0, 54, 0, 51, 0, 55, 0, 56, 0, 35, 0, 57, 0, 38, 0, 58, 0, 59, 0, 60, 0, 61, 0, 61, 0, 62, 0, 59, 0, 63, 0, 64, 0, 55, 0, 55, 0, 34, 0, 63, 0, 65, 0, 66, 0, 67, 0, 68, 0, 69, 0, 70, 0, 48, 0, 71, 0, 72, 0, 44, 0, 48, 0, 72, 0, 73, 0, 74, 0, 75, 0, 75, 0, 76, 0, 73, 0, 77, 0, 78, 0, 79, 0, 80, 0, 81, 0, 82, 0, 83, 0, 84, 0, 64, 0, 64, 0, 63, 0, 83, 0, 85, 0, 86, 0, 66, 0, 87, 0, 70, 0, 88, 0, 89, 0, 90, 0, 72, 0, 72, 0, 71, 0, 89, 0, 91, 0, 92, 0, 93, 0, 94, 0, 95, 0, 96, 0, 97, 0, 98, 0, 99, 0, 100, 0, 101, 0, 102, 0, 103, 0, 104, 0, 105, 0, 106, 0, 107, 0, 108, 0, 109, 0, 110, 0, 111, 0, 112, 0, 113, 0, 114, 0, 115, 0, 116, 0, 117, 0, 118, 0, 119, 0, 120, 0, 121, 0, 122, 0, 123, 0, 124, 0, 125, 0, 126, 0, 127, 0, 128, 0, 129, 0, 130, 0, 131, 0, 132, 0, 133, 0, 134, 0, 135, 0, 136, 0, 137, 0, 138, 0, 139, 0, 140, 0, 141, 0, 142, 0, 143, 0, 144, 0, 145, 0, 146, 0, 147, 0, 148, 0, 149, 0, 150, 0, 151, 0, 152, 0, 153, 0, 154, 0, 155, 0, 156, 0, 157, 0, 158, 0, 159, 0, 159, 0, 160, 0, 157, 0, 161, 0, 162, 0, 163, 0, 164, 0, 165, 0, 166, 0, 167, 0, 168, 0, 169, 0, 170, 0, 171, 0, 172, 0, 173, 0, 174, 0, 175, 0, 176, 0, 177, 0, 178, 0, 179, 0, 180, 0, 181, 0, 181, 0, 182, 0, 179, 0 ),
"blend_shape_data": [  ],
"format": 97539,
"index_count": 228,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 183
}

[sub_resource type="Resource" id=3]
script = ExtResource( 1 )
vertexes = PoolVector3Array( -0.861891, 0, -0.5, 0.786524, 0, -0.5, 0.786524, 0, 0.5, -0.861891, 0, 0.5, -0.519436, 0.831611, -0.5, 0.446867, 0.831611, -0.5, 0.446867, 0.831611, 0.5, -0.519436, 0.831611, 0.5, -0.519436, 1.83161, 0.5, -0.519436, 1.83161, -0.5, 0.446867, 1.83161, -0.5, 0.446867, 1.83161, 0.5, 0.446867, 2.37327, 0.5, -0.519436, 2.37327, 0.5, -0.519436, 2.37327, -0.5, 0.446867, 2.37327, -0.5, 1.44687, 2.7645, -0.5, 1.44687, 1.83161, -0.5, 1.44687, 1.83161, 0.5, 1.44687, 2.7645, 0.5, 2.44687, 2.7645, 0.5, 2.44687, 2.7645, -0.5, 2.44687, 1.83161, -0.5, 2.44687, 1.83161, 0.5, -1.47892, 2.53126, 0.276275, -1.55995, 1.9957, 0.276275, -1.55995, 1.9957, -0.276275, -1.47892, 2.53126, -0.276275, -9.79832, 3.78994, -0.276275, -9.79832, 3.78994, 0.276275, -9.87935, 3.25437, 0.276275, -9.87935, 3.25437, -0.276275, -0.981189, 0.787609, 0.259261, -1.15876, 0.3564, 0.259261, -1.15876, 0.3564, -0.259261, -0.981189, 0.787609, -0.259261, -3.68863, 2.81542, -0.259261, -3.68863, 2.81542, 0.259261, -4.00375, 2.47165, 0.259261, -4.00375, 2.47165, -0.259261 )
vertex_edges = PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 12, 13, 14, 15, 20, 21, 22, 23, 28, 29, 30, 31, 36, 37, 38, 39, 44, 45, 46, 47, 52, 53, 54, 55, 60, 61, 62, 63, 68, 69, 70, 71 )
edge_vertexes = PoolIntArray( 0, 1, 1, 2, 2, 3, 3, 0, 4, 0, 5, 1, 6, 2, 7, 3, 5, 4, 6, 5, 7, 6, 4, 7, 8, 7, 9, 4, 10, 5, 11, 6, 9, 8, 10, 9, 11, 10, 8, 11, 12, 11, 13, 8, 14, 9, 15, 10, 13, 12, 14, 13, 15, 14, 12, 15, 16, 15, 17, 10, 18, 11, 19, 12, 17, 16, 18, 17, 19, 18, 16, 19, 20, 19, 21, 16, 22, 17, 23, 18, 21, 20, 22, 21, 23, 22, 20, 23, 24, 13, 25, 8, 26, 9, 27, 14, 25, 24, 26, 25, 27, 26, 24, 27, 28, 27, 29, 24, 30, 25, 31, 26, 29, 28, 30, 29, 31, 30, 28, 31, 32, 7, 33, 3, 34, 0, 35, 4, 33, 32, 34, 33, 35, 34, 32, 35, 36, 35, 37, 32, 38, 33, 39, 34, 37, 36, 38, 37, 39, 38, 36, 39 )
edge_faces = PoolIntArray( 1, 2, 1, 3, 1, 4, 1, 31, 32, 2, 2, 3, 3, 4, 4, 30, 7, 2, 8, 3, 9, 4, 6, 33, 9, 6, 6, 7, 7, 8, 8, 9, 23, 6, 12, 7, 15, 8, 10, 9, 16, 10, 10, 22, 24, 12, 12, 14, 0, 10, 0, 25, 0, 12, 0, 17, 17, 14, 14, 15, 15, 16, 16, 17, 19, 14, 20, 15, 21, 16, 18, 17, 21, 18, 18, 19, 19, 20, 20, 21, 13, 18, 13, 19, 13, 20, 13, 21, 25, 22, 22, 23, 23, 24, 24, 25, 27, 22, 28, 23, 29, 24, 26, 25, 29, 26, 26, 27, 27, 28, 28, 29, 11, 26, 11, 27, 11, 28, 11, 29, 33, 30, 30, 31, 31, 32, 32, 33, 35, 30, 36, 31, 37, 32, 34, 33, 37, 34, 34, 35, 35, 36, 36, 37, 5, 34, 5, 35, 5, 36, 5, 37 )
edge_edges = PoolIntArray( 3, 5, 0, 6, 1, 7, 2, 62, 63, 0, 8, 1, 9, 2, 10, 61, 14, 4, 15, 5, 12, 6, 13, 60, 19, 11, 16, 8, 17, 9, 18, 10, 46, 12, 23, 13, 30, 14, 21, 15, 31, 19, 24, 45, 47, 17, 26, 29, 25, 20, 26, 44, 27, 22, 24, 28, 35, 23, 32, 18, 33, 20, 34, 27, 38, 28, 39, 29, 36, 30, 37, 31, 43, 35, 40, 32, 41, 33, 42, 34, 41, 36, 42, 37, 43, 38, 40, 39, 51, 21, 48, 16, 49, 22, 50, 25, 54, 44, 55, 45, 52, 46, 53, 47, 59, 51, 56, 48, 57, 49, 58, 50, 57, 52, 58, 53, 59, 54, 56, 55, 67, 7, 64, 3, 65, 4, 66, 11, 70, 60, 71, 61, 68, 62, 69, 63, 75, 67, 72, 64, 73, 65, 74, 66, 73, 68, 74, 69, 75, 70, 72, 71 )
face_edges = PoolIntArray( 27, 0, 4, 5, 6, 75, 12, 13, 14, 15, 20, 59, 22, 43, 28, 29, 30, 31, 36, 37, 38, 39, 44, 45, 46, 47, 52, 53, 54, 55, 60, 61, 62, 63, 68, 69, 70, 71 )
face_surfaces = PoolIntArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )

[sub_resource type="ArrayMesh" id=4]
surfaces/0 = {
"aabb": AABB( -0.716786, 0, -0.716786, 2.43357, 2.36236, 2.43357 ),
"array_data": PoolByteArray( 80, 127, 55, 191, 187, 48, 23, 64, 80, 127, 55, 191, 0, 127, 0, 0, 168, 191, 219, 63, 187, 48, 23, 64, 80, 127, 55, 191, 0, 127, 0, 0, 168, 191, 219, 63, 187, 48, 23, 64, 168, 191, 219, 63, 0, 127, 0, 0, 80, 127, 55, 191, 187, 48, 23, 64, 168, 191, 219, 63, 0, 127, 0, 0, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 192, 63, 0, 129, 0, 0, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 0, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 0, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 0, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 192, 63, 0, 129, 0, 0, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 192, 63, 0, 129, 0, 0, 0, 0, 192, 63, 0, 0, 0, 64, 0, 0, 0, 191, 0, 0, 129, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 191, 0, 0, 129, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 129, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 129, 0, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 129, 0, 0, 0, 192, 63, 0, 0, 0, 64, 0, 0, 0, 191, 0, 0, 129, 0, 0, 0, 192, 63, 0, 0, 0, 64, 0, 0, 192, 63, 127, 0, 0, 0, 0, 0, 192, 63, 0, 0, 0, 64, 0, 0, 0, 191, 127, 0, 0, 0, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 0, 191, 127, 0, 0, 0, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 192, 63, 127, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 192, 63, 0, 0, 127, 0, 0, 0, 192, 63, 0, 0, 0, 64, 0, 0, 192, 63, 0, 0, 127, 0, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 192, 63, 0, 0, 127, 0, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 192, 63, 0, 0, 127, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 192, 63, 0, 0, 127, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 192, 63, 0, 0, 127, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 191, 129, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 192, 63, 129, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 192, 63, 129, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 129, 0, 0, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 191, 184, 152, 0, 0, 80, 127, 55, 191, 7, 158, 9, 64, 80, 127, 55, 191, 184, 152, 0, 0, 80, 127, 55, 191, 7, 158, 9, 64, 168, 191, 219, 63, 184, 152, 0, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 192, 63, 184, 152, 0, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 191, 184, 152, 0, 0, 80, 127, 55, 191, 7, 158, 9, 64, 168, 191, 219, 63, 184, 152, 0, 0, 0, 0, 192, 63, 0, 0, 0, 64, 0, 0, 0, 191, 0, 152, 184, 0, 168, 191, 219, 63, 7, 158, 9, 64, 80, 127, 55, 191, 0, 152, 184, 0, 80, 127, 55, 191, 7, 158, 9, 64, 80, 127, 55, 191, 0, 152, 184, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 0, 191, 0, 152, 184, 0, 0, 0, 192, 63, 0, 0, 0, 64, 0, 0, 0, 191, 0, 152, 184, 0, 80, 127, 55, 191, 7, 158, 9, 64, 80, 127, 55, 191, 0, 152, 184, 0, 0, 0, 192, 63, 0, 0, 0, 64, 0, 0, 192, 63, 72, 152, 0, 0, 168, 191, 219, 63, 7, 158, 9, 64, 168, 191, 219, 63, 72, 152, 0, 0, 168, 191, 219, 63, 7, 158, 9, 64, 80, 127, 55, 191, 72, 152, 0, 0, 0, 0, 192, 63, 0, 0, 0, 64, 0, 0, 0, 191, 72, 152, 0, 0, 0, 0, 192, 63, 0, 0, 0, 64, 0, 0, 192, 63, 72, 152, 0, 0, 168, 191, 219, 63, 7, 158, 9, 64, 80, 127, 55, 191, 72, 152, 0, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 192, 63, 0, 152, 72, 0, 80, 127, 55, 191, 7, 158, 9, 64, 168, 191, 219, 63, 0, 152, 72, 0, 168, 191, 219, 63, 7, 158, 9, 64, 168, 191, 219, 63, 0, 152, 72, 0, 0, 0, 192, 63, 0, 0, 0, 64, 0, 0, 192, 63, 0, 152, 72, 0, 0, 0, 0, 191, 0, 0, 0, 64, 0, 0, 192, 63, 0, 152, 72, 0, 168, 191, 219, 63, 7, 158, 9, 64, 168, 191, 219, 63, 0, 152, 72, 0, 80, 127, 55, 191, 187, 48, 23, 64, 168, 191, 219, 63, 0, 0, 127, 0, 168, 191, 219, 63, 187, 48, 23, 64, 168, 191, 219, 63, 0, 0, 127, 0, 168, 191, 219, 63, 7, 158, 9, 64, 168, 191, 219, 63, 0, 0, 127, 0, 168, 191, 219, 63, 7, 158, 9, 64, 168, 191, 219, 63, 0, 0, 127, 0, 80, 127, 55, 191, 7, 158, 9, 64, 168, 191, 219, 63, 0, 0, 127, 0, 80, 127, 55, 191, 187, 48, 23, 64, 168, 191, 219, 63, 0, 0, 127, 0, 80, 127, 55, 191, 187, 48, 23, 64, 80, 127, 55, 191, 129, 0, 0, 0, 80, 127, 55, 191, 187, 48, 23, 64, 168, 191, 219, 63, 129, 0, 0, 0, 80, 127, 55, 191, 7, 158, 9, 64, 168, 191, 219, 63, 129, 0, 0, 0, 80, 127, 55, 191, 7, 158, 9, 64, 80, 127, 55, 191, 129, 0, 0, 0, 168, 191, 219, 63, 187, 48, 23, 64, 80, 127, 55, 191, 0, 0, 129, 0, 80, 127, 55, 191, 187, 48, 23, 64, 80, 127, 55, 191, 0, 0, 129, 0, 80, 127, 55, 191, 7, 158, 9, 64, 80, 127, 55, 191, 0, 0, 129, 0, 80, 127, 55, 191, 7, 158, 9, 64, 80, 127, 55, 191, 0, 0, 129, 0, 168, 191, 219, 63, 7, 158, 9, 64, 80, 127, 55, 191, 0, 0, 129, 0, 168, 191, 219, 63, 187, 48, 23, 64, 80, 127, 55, 191, 0, 0, 129, 0, 168, 191, 219, 63, 187, 48, 23, 64, 168, 191, 219, 63, 127, 0, 0, 0, 168, 191, 219, 63, 187, 48, 23, 64, 80, 127, 55, 191, 127, 0, 0, 0, 168, 191, 219, 63, 7, 158, 9, 64, 80, 127, 55, 191, 127, 0, 0, 0, 168, 191, 219, 63, 7, 158, 9, 64, 168, 191, 219, 63, 127, 0, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 2, 0, 3, 0, 0, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 18, 0, 19, 0, 16, 0, 20, 0, 21, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 27, 0, 28, 0, 28, 0, 29, 0, 26, 0, 30, 0, 31, 0, 32, 0, 33, 0, 34, 0, 35, 0, 36, 0, 37, 0, 38, 0, 39, 0, 40, 0, 41, 0, 42, 0, 43, 0, 44, 0, 45, 0, 46, 0, 47, 0, 48, 0, 49, 0, 50, 0, 51, 0, 52, 0, 53, 0, 54, 0, 55, 0, 56, 0, 57, 0, 58, 0, 59, 0, 60, 0, 61, 0, 62, 0, 62, 0, 63, 0, 60, 0, 64, 0, 65, 0, 66, 0, 67, 0, 68, 0, 69, 0, 70, 0, 71, 0, 72, 0, 72, 0, 73, 0, 70, 0 ),
"blend_shape_data": [  ],
"format": 97539,
"index_count": 84,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 74
}

[sub_resource type="Resource" id=5]
script = ExtResource( 1 )
vertexes = PoolVector3Array( -0.5, 0, -0.5, 1.5, 0, -0.5, 1.5, 0, 1.5, -0.5, 0, 1.5, -0.5, 2, -0.5, 1.5, 2, -0.5, 1.5, 2, 1.5, -0.5, 2, 1.5, -0.716786, 2.15027, 1.71679, -0.716786, 2.15027, -0.716786, 1.71679, 2.15027, -0.716786, 1.71679, 2.15027, 1.71679, 1.71679, 2.36235, 1.71679, -0.716786, 2.36235, 1.71679, -0.716786, 2.36235, -0.716786, 1.71679, 2.36235, -0.716786 )
vertex_edges = PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 12, 13, 14, 15, 20, 21, 22, 23 )
edge_vertexes = PoolIntArray( 0, 1, 1, 2, 2, 3, 3, 0, 4, 0, 5, 1, 6, 2, 7, 3, 5, 4, 6, 5, 7, 6, 4, 7, 8, 7, 9, 4, 10, 5, 11, 6, 9, 8, 10, 9, 11, 10, 8, 11, 12, 11, 13, 8, 14, 9, 15, 10, 13, 12, 14, 13, 15, 14, 12, 15 )
edge_faces = PoolIntArray( 1, 2, 1, 3, 1, 4, 1, 5, 5, 2, 2, 3, 3, 4, 4, 5, 7, 2, 8, 3, 9, 4, 6, 5, 9, 6, 6, 7, 7, 8, 8, 9, 11, 6, 12, 7, 13, 8, 10, 9, 13, 10, 10, 11, 11, 12, 12, 13, 0, 10, 0, 11, 0, 12, 0, 13 )
edge_edges = PoolIntArray( 3, 5, 0, 6, 1, 7, 2, 4, 11, 0, 8, 1, 9, 2, 10, 3, 14, 4, 15, 5, 12, 6, 13, 7, 19, 11, 16, 8, 17, 9, 18, 10, 22, 12, 23, 13, 20, 14, 21, 15, 27, 19, 24, 16, 25, 17, 26, 18, 25, 20, 26, 21, 27, 22, 24, 23 )
face_edges = PoolIntArray( 27, 0, 4, 5, 6, 7, 12, 13, 14, 15, 20, 21, 22, 23 )
face_surfaces = PoolIntArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )

[node name="PortCrane" type="Spatial"]
script = ExtResource( 4 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.534222, 0, 0.618571 )
shape = SubResource( 1 )

[node name="CraneArm" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.30187, 0 )

[node name="CraneArm" type="MeshInstance" parent="CraneArm"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="PlyEditor" type="Node" parent="CraneArm/CraneArm"]
script = ExtResource( 2 )
ply_mesh = SubResource( 3 )

[node name="CraneBase" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.389194, 0, -0.389194 )
mesh = SubResource( 4 )
material/0 = ExtResource( 3 )

[node name="PlyEditor" type="Node" parent="CraneBase"]
script = ExtResource( 2 )
ply_mesh = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
